{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 30,
  "lineage": "5ddbccc1-e548-e387-f3e1-52a229c2ef58",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mav-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/networkInterfaces/mav-nic",
            "internal_domain_name_suffix": "znqkz4gxssautafbpub033sdtf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.125.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/publicIPAddresses/mav-ip",
                "subnet_id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/virtualNetworks/mav-network/subnets/mav-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D6-6A-D3",
            "name": "mav-nic",
            "private_ip_address": "10.125.1.4",
            "private_ip_addresses": [
              "10.125.1.4"
            ],
            "resource_group_name": "mavbuzz-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Compute/virtualMachines/mav-vm"
          },
          "dependencies": [
            "azurerm_public_ip.mav-ip",
            "azurerm_resource_group.mav",
            "azurerm_subnet.mav-subnet",
            "azurerm_virtual_network.mav-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mav-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/networkSecurityGroups/mav-sg",
            "location": "eastus",
            "name": "mav-sg",
            "resource_group_name": "mavbuzz-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mav-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "mav-allow-sql-server",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mav-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/networkSecurityGroups/mav-sg/securityRules/mav-dev-rule",
            "name": "mav-dev-rule",
            "network_security_group_name": "mav-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mavbuzz-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mav-sg",
            "azurerm_resource_group.mav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mav-sql-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "1433",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/networkSecurityGroups/mav-sg/securityRules/mav-allow-sql-server",
            "name": "mav-allow-sql-server",
            "network_security_group_name": "mav-sg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "mavbuzz-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mav-sg",
            "azurerm_resource_group.mav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mav-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/publicIPAddresses/mav-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.107.158",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mav-ip",
            "resource_group_name": "mavbuzz-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mav"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mav-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.125.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/virtualNetworks/mav-network/subnets/mav-subnet",
            "name": "mav-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mavbuzz-resources",
            "virtual_network_name": "mav-network"
          },
          "dependencies": [
            "azurerm_resource_group.mav",
            "azurerm_virtual_network.mav-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mav-sgn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/virtualNetworks/mav-network/subnets/mav-subnet",
            "network_security_group_id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/networkSecurityGroups/mav-sg",
            "subnet_id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/virtualNetworks/mav-network/subnets/mav-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.mav-sg",
            "azurerm_resource_group.mav",
            "azurerm_subnet.mav-subnet",
            "azurerm_virtual_network.mav-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mav-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.125.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f8ac60cb-94d7-4981-80a1-7d03aef6439d",
            "id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/virtualNetworks/mav-network",
            "location": "eastus",
            "name": "mav-network",
            "resource_group_name": "mavbuzz-resources",
            "subnet": [
              {
                "address_prefix": "10.125.1.0/24",
                "id": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/virtualNetworks/mav-network/subnets/mav-subnet",
                "name": "mav-subnet",
                "security_group": "/subscriptions/737f2879-bf9e-4cc4-aea1-3dce0f42e525/resourceGroups/mavbuzz-resources/providers/Microsoft.Network/networkSecurityGroups/mav-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mav"
          ]
        }
      ]
    }
  ]
}